/*---------------------------------------------------------------------------------------------
 *  Copyright (c) Dolittle. All rights reserved.
 *  Licensed under the MIT License. See LICENSE in the project root for license information.
 *--------------------------------------------------------------------------------------------*/
syntax = "proto3";

import "dolittle/timeseries/datatypes/measurement.proto";
import "dolittle/timeseries/datatypes/vector2.proto";
import "dolittle/timeseries/datatypes/vector3.proto";

package dolittle.timeseries.datatypes;

option csharp_namespace = "Dolittle.TimeSeries.DataTypes.Protobuf";

message Value {
    oneof value {
        Measurement measurement_value = 1;
        Vector2 vector2_value = 2;
        Vector3 vector3_value = 3;
    }
}